--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
+    "firebase": "^7.9.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-pwa": "~4.2.0",
     "@vue/cli-plugin-router": "~4.2.0",
